fix scrollbar resizin body

--- a/angular-cards/src/styles.css
+++ b/angular-cards/src/styles.css
@@ -5,9 +5,7 @@ html,
 body {
   height: 100%;
 }
-html {
-  overflow-y: hidden;
-}
+
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
